--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
     <main>
     <section>
     <div class="hero">
-        <img src= alt="four people working together at a boardroom table"
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people working together at a boardroom table"/>
     </div>
     </section>
 
-    <section>
-    <div class="content">
+    <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="a notepad on a desk with an SEO brainstorm on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -57,11 +56,10 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
     </section>
+    </main>
 
-    <section>
-    <div class="benefits">
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="an operations-to-sale funnel that also looks like a lightbulb" />
@@ -83,17 +81,13 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
     </section>
-    </main>
 
-    <footer>
-    <div class="footer">
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
     </footer>
 
 </body>
