fixed links and added comments

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="a notepad on a desk with an SEO brainstorm on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
